fix: Fixed an issue with the navbar on smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,21 +38,6 @@ nav {
     backdrop-filter: blur(10px);
 }
 
-nav::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, transparent, rgba(52, 152, 219, .5), transparent);
-    transition: .4s;
-}
-
-nav:hover::before {
-    left: 100%;
-}
-
 nav a {
     color: var(--text) !important;
     transition: color 0.4s !important;
